merge degroff/java17 to master